--- a/assests/estilo.css
+++ b/assests/estilo.css
@@ -1,5 +1,5 @@
 body{
-    background-color: aqua;
+    height: 5000px;
 }
 .logo{
     width: auto;
@@ -16,4 +16,14 @@ body{
 .fonte_sub{
     font-size: 50px;
     margin-top: 0;
+}
+.sessao1{
+    background-color: aqua;
+    height: 1000px;
+}
+.sessoa2{
+    background-color: white;
+}
+.sessoa3{
+    background-color: aquamarine;
 }
