--- a/assests/estilo.css
+++ b/assests/estilo.css
@@ -1,5 +1,6 @@
 body{
     height: 5000px;
+    background-color: transparent;
 }
 .logo{
     width: auto;
@@ -26,32 +27,82 @@ body{
     /*flex-direction: column;
     display: flex;*/
     align-items: center;
-    margin-bottom: 10%;
     height: 1000px;
     width: auto;
-    background-color: white;
+    background-color:palevioletred;
 }
 .sessao3{
     background-color: aquamarine;
-    margin-top: 30%;
-    height: auto;
+    height: 18%;
     width: auto;
-
-
+    margin: auto;
+    float: left;
+    align-items: center;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: space-between;
 }
 .caixoes{
     align-items: center;
     width: 450px;
     height: auto;
-    margin: 10px;
-    /*float: left;*/
+    margin: 10px auto;
     float: left;
     flex-wrap: wrap;
-    margin-bottom: 100px;
+    border: 10px solid black;
+    margin-left: 0%;
     
 }
 
 .imagenscaixoes{
     height: 400px;
     width: 400px;
+}
+.auto{
+    width: 50%;
+    height: 50%;
+}
+.alinhamento_centro{
+    text-align: center;
+}
+
+.sessao4{
+    background-color:chartreuse;
+    height: 18%;
+    width: 100%;
+    margin: auto;
+    float: left;
+
+    justify-content: space-between;
+    flex-direction: column;
+}
+.ajuste_imagem{
+    width: 60%;
+    height: 60%;
+
+}
+.parceiros{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.div4{
+    width:100% ;
+    height: 50%;
+}
+
+#Vasco{
+    width: 25%      l;
+}
+.sessao{
+    height: 18%;
+    width: 100%;
+    align-items: center;
+    flex-wrap: wrap;
+    display: flex;
+    float: none;
+}
+.sessao5{
+    background-color: blueviolet;
+    justify-content: center;
 }
