--- a/meu_css.css
+++ b/meu_css.css
@@ -53,3 +53,14 @@
 .divisao_div{
     height: 50%;
 }
+
+.sessao_geral{
+    height: 100vh;
+}
+.div_alt_completa{
+    height: 100%;
+}
+
+.video{
+    width: 100%;
+}
