--- a/meu_css.css
+++ b/meu_css.css
@@ -18,7 +18,6 @@
 }
 
 .logo{
-    height: 200px;
     position: relative;
     width: 100%;
     display: flex;
@@ -74,4 +73,8 @@
 }
 .rodape{
     background-color: antiquewhite ;
+}
+
+.ses2_mobile{
+    height: 80vh;
 }
